fix overflow

--- a/components/Common/Avatar/avatar.module.scss
+++ b/components/Common/Avatar/avatar.module.scss
@@ -1,9 +1,8 @@
-@import '../../../styles/globals.scss';
+@import "../../../styles/globals.scss";
 
 .avatar {
     border-radius: 9999px;
-    overflow: "hidden";
-
+    overflow: hidden;
 }
 
 .avatarButton {
@@ -15,8 +14,8 @@
     border-width: 3px;
     border-color: transparent;
     background-color: transparent;
-    overflow: "hidden";
-    &:hover{
+    overflow: hidden;
+    &:hover {
         border-style: solid;
         border-color: $hot_pink;
     }
